--- a/web/components/FooterCentered/FooterCentered.module.css
+++ b/web/components/FooterCentered/FooterCentered.module.css
@@ -9,13 +9,13 @@
     align-items: center;
     padding: var(--mantine-spacing-md) var(--mantine-spacing-md);
 
-    @media (max-width: $mantine-breakpoint-sm) {
+    @media (max-width: var(--mantine-breakpoint-sm)) {
         flex-direction: column;
     }
 }
 
 .links {
-    @media (max-width: $mantine-breakpoint-sm) {
+    @media (max-width: var(--mantine-breakpoint-sm)) {
         margin-top: var(--mantine-spacing-lg);
         margin-bottom: var(--mantine-spacing-sm);
     }
