--- a/web/components/DoubleNavbar/DoubleNavbar.module.css
+++ b/web/components/DoubleNavbar/DoubleNavbar.module.css
@@ -49,9 +49,8 @@
 }
 
 .title {
-    font-family:
-            Greycliff CF,
-            var(--mantine-font-family);
+    font-family: Greycliff CF,
+    var(--mantine-font-family);
     margin-bottom: var(--mantine-spacing-xl);
     background-color: var(--mantine-color-body);
     padding: var(--mantine-spacing-md);
